# n00n

./: .gitignore  .gitleaks.toml  .maki-picks.txt  .yamllint  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  codecov.yml  deny.toml  flake.nix  hk.pkl  install.ps1  install.sh  justfile  mise.toml  result  rust-toolchain.toml  typos.toml
maki-lua/: Cargo.toml
maki-lua/src/: docs_render.rs  language.rs  lib.rs  loader.rs  runtime.rs
maki-lua/src/api/: AGENTS.md  agent.rs  autocmd.rs  ctx.rs  fn.rs  fs.rs  interpreter.rs  json.rs  mod.rs  split.rs  tool.rs
maki-lua/tests/: code_execution_policy.rs  plugin_host.rs  task_policy.rs
maki-storage/: Cargo.toml
maki-storage/src/: id.rs  lib.rs  sessions.rs
n00n-acp/: Cargo.toml
n00n-acp/src/: lib.rs  methods.rs  permissions.rs  server.rs  translate.rs
n00n-agent/: Cargo.toml
n00n-agent/src/: cancel.rs  child_guard.rs  command.rs  diff.rs  headless.rs  lib.rs  permissions.rs  prompt.rs  task_set.rs  template.rs  tokenize.rs  types.rs
n00n-agent/src/agent/: compaction.rs  history.rs  instructions.rs  mod.rs  run.rs  streaming.rs  tool_dispatch.rs
n00n-agent/src/mcp/: config.rs  http.rs  mod.rs  protocol.rs  stdio.rs  transport.rs
n00n-agent/src/prompts/: compaction.md  compaction_user.md  general.md  plan.md  research.md  system.md
n00n-agent/src/tools/: file_tracker.rs  grep.rs  interpreter_bridge.rs  mod.rs  registry.rs  schema.rs  tool_search.rs
n00n-arbor/: Cargo.toml
n00n-arbor/src/: lib.rs
n00n-config/: Cargo.toml
n00n-config/src/: lib.rs  providers.rs
n00n-docgen/: Cargo.toml
n00n-docgen/src/: gen_commands.rs  gen_config.rs  gen_keybindings.rs  gen_lua_api.rs  gen_providers.rs  gen_tools.rs  lua_util.rs  main.rs
n00n-lua/: Cargo.toml
n00n-lua/benches/: luau_perf.rs  perf.rs
n00n-lua/src/: docs.rs  docs_render.rs  error.rs  language.rs  lib.rs  loader.rs  plugin_permissions.rs  runtime.rs
n00n-lua/src/api/: AGENTS.md  agent.rs  arbor.rs  async.rs  autocmd.rs  base64.rs  env.rs  fn.rs  fs.rs  image.rs  interpreter.rs  json.rs  keymap.rs  log.rs  mod.rs  net.rs  options.rs  session.rs  slot.rs  split.rs  text.rs  tool.rs  uv.rs  workflow.rs  yaml.rs
n00n-lua/tests/: batch_policy.rs  blackboard.rs  code_execution_policy.rs  events_slots.rs  plugin_host.rs  real_plugins_restore.rs  spec.rs  task_policy.rs  treesitter_compat.rs  uv_api.rs
n00n-markdown/: Cargo.toml
n00n-markdown/src/: lib.rs  render.rs
n00n-providers/: Cargo.toml  build.rs
n00n-providers/src/: error.rs  lib.rs  manifest.rs  model.rs  model_registry.rs  provider.rs  retry.rs  types.rs
n00n-providers/src/providers/: custom.rs  deepseek.rs  dynamic.rs  google.rs  llama_cpp.rs  local.rs  mistral.rs  mod.rs  ollama.rs  openai_compat.rs  opencode.rs  openrouter.rs  synthetic.rs  tensorx.rs  windsurf.rs
n00n-storage/: Cargo.toml
n00n-storage/src/: auth.rs  id.rs  input_history.rs  lib.rs  log.rs  model.rs  paths.rs  plans.rs  sessions.rs  theme.rs  toon.rs  version.rs
n00n-ui/: Cargo.toml
n00n-ui/benches/: splash.rs
n00n-ui/src/: animation.rs  cast.rs  chat.rs  clipboard.rs  color_compat.rs  event_loop.rs  highlight.rs  image.rs  input.rs  lib.rs  markdown.rs  mascot.rs  render_worker.rs  selection.rs  splash.rs  storage_writer.rs  terminal.rs  terminal_image.rs  text_buffer.rs  theme.rs  update.rs
n00n-ui/src/agent/: agent_loop.rs  cancel_map.rs  command_router.rs  mod.rs  shared_queue.rs
n00n-ui/src/app/: btw.rs  image_paste.rs  mod.rs  mode.rs  mouse.rs  queue.rs  session.rs  session_state.rs  shell.rs  tests.rs  view.rs
n00n-ui/src/components/: btw_modal.rs  code_view.rs  command.rs  file_picker.rs  form.rs  help_modal.rs  input.rs  keybindings.rs  list_picker.rs  login_picker.rs  lua_float.rs  mcp_picker.rs  mention_flyout.rs  mod.rs  modal.rs  model_picker.rs  permission_prompt.rs  plan_form.rs  progress_bar.rs  queue_panel.rs  rewind_picker.rs  scrollbar.rs  search_modal.rs  split_layout.rs  status_bar.rs  streaming_content.rs  theme_picker.rs  tool_display.rs  usage_modal.rs
n00n-ui/src/themes/: ayu_dark.toml  ayu_light.toml  ayu_mirage.toml  carbonfox.toml  catppuccin_frappe.toml  catppuccin_latte.toml  catppuccin_macchiato.toml  catppuccin_mocha.toml  dracula.toml  everforest_dark.toml  fleet_dark.toml  github_dark.toml  gruvbox.toml  gruvbox_light.toml  kanagawa.toml  material_darker.toml  monokai_pro.toml  night_owl.toml  nightfox.toml  nord.toml  onedark.toml  rose_pine.toml  rose_pine_dawn.toml  rose_pine_moon.toml  solarized_dark.toml  solarized_light.toml  tokyonight.toml  vscode_dark_plus.toml  zenburn.toml
noon-acp/: Cargo.toml
noon-acp/src/: lib.rs  methods.rs  permissions.rs  server.rs  translate.rs
noon-config/: Cargo.toml
noon-config/src/: lib.rs  providers.rs
noon-docgen/: Cargo.toml
noon-docgen/src/: gen_commands.rs  gen_config.rs  gen_keybindings.rs  gen_lua_api.rs  gen_providers.rs  gen_tools.rs  main.rs
noon-highlight/: Cargo.toml
noon-highlight/src/: lib.rs
noon-markdown/: Cargo.toml
noon-markdown/src/: lib.rs  render.rs
noon-providers/: Cargo.toml  build.rs
noon-providers/src/: error.rs  model.rs  model_registry.rs  provider.rs  types.rs
noon-providers/src/providers/: custom.rs  deepseek.rs  dynamic.rs  google.rs  llama_cpp.rs  local.rs  mistral.rs  mod.rs  ollama.rs  openai_compat.rs  opencode.rs  openrouter.rs  synthetic.rs  tensorx.rs
noon-ui/: Cargo.toml
noon-ui/benches/: splash.rs
noon-ui/src/: chat.rs  event_loop.rs  highlight.rs  image.rs  lib.rs  markdown.rs  render_worker.rs  selection.rs  splash.rs  storage_writer.rs  terminal.rs  theme.rs  update.rs
noon-ui/src/agent/: agent_loop.rs  cancel_map.rs  command_router.rs  mod.rs  shared_queue.rs
noon-ui/src/app/: btw.rs  image_paste.rs  mod.rs  mode.rs  mouse.rs  session.rs  session_state.rs  shell.rs  tests.rs  view.rs
noon-ui/src/components/: code_view.rs  command.rs  input.rs  login_picker.rs  lua_float.rs  mcp_picker.rs  mod.rs  model_picker.rs  permission_prompt.rs  rewind_picker.rs  search_modal.rs  split_layout.rs  status_bar.rs  (+3 more)
(+474 files in other folders)
