[package]
name = "maki-lua"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
arc-swap = { workspace = true }
async-lock = { workspace = true }
base64 = { workspace = true }
image = { workspace = true, features = ["jpeg", "gif", "webp"] }
crossterm = { workspace = true }
maki-agent = { workspace = true }
maki-config = { workspace = true }
maki-highlight = { workspace = true }
maki-interpreter = { workspace = true }
maki-lua-macro = { workspace = true }
maki-markdown = { workspace = true }
maki-providers = { workspace = true }
mlua = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
smol = { workspace = true }
event-listener = { workspace = true }
flume = { workspace = true }
futures = { workspace = true }
futures-lite = { workspace = true }
tree-sitter = { workspace = true }
unicode-width = { workspace = true }
regex = { workspace = true }
include_dir = { workspace = true }
maki-storage = { workspace = true }
humantime = { workspace = true }
isahc = { workspace = true }
htmd = { workspace = true }
jsonschema = { workspace = true }
toml = { workspace = true }
tree-sitter-bash = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-c-sharp = { workspace = true }
tree-sitter-cpp = { workspace = true }
tree-sitter-elixir = { workspace = true }
tree-sitter-gleam = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-html = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-kotlin-ng = { workspace = true }
tree-sitter-lua = { workspace = true }
tree-sitter-md = { workspace = true }
tree-sitter-nix = { workspace = true }
tree-sitter-php = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-ruby = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-scala = { workspace = true }
tree-sitter-sequel = { workspace = true }
tree-sitter-starlark = { workspace = true }
tree-sitter-swift = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-zig = { workspace = true }
tree-sitter-dart = { workspace = true }
[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }
criterion = { workspace = true }
image = { workspace = true }
maki-agent = { workspace = true }
tempfile = { workspace = true }
test-case = { workspace = true }

[[bench]]
name = "luau_perf"
harness = false
