[package]
name = "n00n-acp"
version.workspace = true
edition.workspace = true

[dependencies]
n00n-agent = { workspace = true }
n00n-providers = { workspace = true }
n00n-storage = { workspace = true }
agent-client-protocol-schema = { workspace = true }
smol = { workspace = true }
flume = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
color-eyre = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
