[package]
name = "n00n-agent"
version.workspace = true
edition.workspace = true

[dependencies]
n00n-providers = { workspace = true }
n00n-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ignore = { workspace = true }
strum = { workspace = true }
n00n-storage = { workspace = true }
grep-regex = { workspace = true }
grep-searcher = { workspace = true }
similar = { workspace = true }
jsonrepair = { workspace = true }
jiff = { workspace = true }
humantime = { workspace = true }
smol = { workspace = true }
async-process = { workspace = true }
flume = { workspace = true }
arc-swap = { workspace = true }
bitflags = { workspace = true }
event-listener = { workspace = true }
async-lock = { workspace = true }
async-io = { workspace = true }
futures-lite = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
isahc = { workspace = true }
libc = { workspace = true }
open = { workspace = true }
sha2 = { workspace = true }
serde_yaml = { workspace = true }
base64 = { workspace = true }
getrandom = { workspace = true }
tiktoken-rs = { workspace = true }


[dev-dependencies]
test-case = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true

