[package]
name = "n00n-config"
version.workspace = true
edition.workspace = true

[dependencies]
n00n-config-macro = { workspace = true }
n00n-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true }
dotenvy = { workspace = true }
inventory = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
