[package]
name = "n00n-lua"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
arc-swap = { workspace = true }
async-lock = { workspace = true }
base64 = { workspace = true }
image = { workspace = true, features = ["jpeg", "gif", "webp"] }
crossterm = { workspace = true }
n00n-agent = { workspace = true }
n00n-config = { workspace = true }
n00n-highlight = { workspace = true }
n00n-interpreter = { workspace = true }
n00n-lua-macro = { workspace = true }
n00n-markdown = { workspace = true }
n00n-arbor = { workspace = true }
n00n-providers = { workspace = true }
mlua = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toon-format = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
smol = { workspace = true }
event-listener = { workspace = true }
flume = { workspace = true }
futures = { workspace = true }
futures-lite = { workspace = true }
libc = { workspace = true }
pin-project-lite = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-astro-next = { workspace = true }
tree-sitter-containerfile = { workspace = true }
tree-sitter-css = { workspace = true }
tree-sitter-hcl = { workspace = true }
tree-sitter-json = { workspace = true }
tree-sitter-make = { workspace = true }
cortexkit-tree-sitter-scss = { workspace = true }
tree-sitter-svelte-ng = { workspace = true }
tree-sitter-vue-next = { workspace = true }
unicode-width = { workspace = true }
regex = { workspace = true }
include_dir = { workspace = true }
n00n-storage = { workspace = true }
humantime = { workspace = true }
isahc = { workspace = true }
htmd = { workspace = true }
jsonschema = { workspace = true }
sha2 = { workspace = true }
toml = { workspace = true }
tree-sitter-bash = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-c-sharp = { workspace = true }
tree-sitter-cpp = { workspace = true }
tree-sitter-elixir = { workspace = true }
tree-sitter-gleam = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-html = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-kotlin-ng = { workspace = true }
tree-sitter-lua = { workspace = true }
tree-sitter-md = { workspace = true }
tree-sitter-nix = { workspace = true }
tree-sitter-php = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-ruby = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-scala = { workspace = true }
tree-sitter-sequel = { workspace = true }
tree-sitter-starlark = { workspace = true }
tree-sitter-swift = { workspace = true }
tree-sitter-toml-ng = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-zig = { workspace = true }
tree-sitter-dart = { workspace = true }
tree-sitter-yaml = { workspace = true }
[target.'cfg(unix)'.dependencies]
rustix = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }
criterion = { workspace = true }
image = { workspace = true }
n00n-agent = { workspace = true }
tempfile = { workspace = true }
test-case = { workspace = true }

[[bench]]
name = "luau_perf"
harness = false

[[bench]]
name = "perf"
harness = false

[lints]
workspace = true
