[package]
name = "n00n-providers"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
n00n-storage = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
strum = { workspace = true }
smol = { workspace = true }
async-lock = { workspace = true }
flume = { workspace = true }
futures-lite = { workspace = true }
futures = { workspace = true }
isahc = { workspace = true }
async-tungstenite = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
wait-timeout = { workspace = true }
fastrand = { workspace = true }
n00n-config = { workspace = true }
inventory = { workspace = true }
jiff = { workspace = true }
libc = { workspace = true }
getrandom = { workspace = true }
rustls = { version = "0.23", default-features = false, features = ["ring"] }

[dev-dependencies]
test-case = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
