[package]
name = "n00n-storage"
version.workspace = true
edition.workspace = true

[dependencies]
getrandom = { workspace = true }
isahc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toon-format = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
etcetera = { workspace = true }
bs58 = { workspace = true }
uuid = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
tempfile = { workspace = true }
isahc = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
