[package]
name = "noon-acp"
version.workspace = true
edition.workspace = true

[dependencies]
noon-agent = { workspace = true }
noon-providers = { workspace = true }
noon-storage = { workspace = true }
agent-client-protocol-schema = { workspace = true }
smol = { workspace = true }
flume = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
color-eyre = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
tempfile = { workspace = true }
