[package]
name = "noon-config"
version.workspace = true
edition.workspace = true

[dependencies]
noon-config-macro = { workspace = true }
noon-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true }
dotenvy = { workspace = true }
inventory = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
tempfile = { workspace = true }
