[package]
name = "noon-docgen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "noon-docgen"
path = "src/main.rs"

[dependencies]
noon-agent = { workspace = true }
noon-config = { workspace = true }
noon-lua = { workspace = true }
noon-providers = { workspace = true }
noon-ui = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
smol = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
