[package]
name = "noon-highlight"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde_json = { workspace = true }
syntect = { workspace = true }
two-face = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
