[package]
name = "noon-markdown"
description = "Theme-free markdown parser and width-aware renderer shared by noon-ui and the noon-lua bridge."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
noon-highlight = { workspace = true }
unicode-width = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
fastrand = { workspace = true }
